Functional render for Telly's Parser(no nest)
While touching almost none of his original code, I've made a function to
read a model and recreate it. Until we have model nesting however, it
can't actually put anything inside anything else.

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,15 +1,10 @@
 {
-	"version": "0.2.0",
-	"configurations": [
-	    {
-                "name": "Debug",
-                "type": "chrome",
-                "request": "launch",
-                "webRoot": "${workspaceRoot}/DemoGUI v2",
-                "url": "http://localhost:3000/HelloWorld.htm", 
-                "userDataDir": "${workspaceRoot}/.vscode/chrome",
-                "sourceMaps": true,
-                "preLaunchTask": "development"
-            }
-	]
+ "version": "0.2.0",
+ "configurations": [
+ {
+ "name": "Debugger",
+ "type": "chrome",
+ "request": "launch",
+ "file": "${workspaceRoot}/App_Example/index.htm"
+ }]
 }
